--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,10 @@
-# MySQL設定
+# MySQL設定（追加する）
+MYSQL_ROOT_PASSWORD=rootpassword  
+MYSQL_DATABASE=mapquizdb         
+MYSQL_USER=user                   
+MYSQL_PASSWORD=password           
+
+# 既存の設定
 DB_HOST=mapquiz-mysql-container
 DB_PORT=3306
 DB_USER=user
@@ -8,5 +14,5 @@ DB_NAME=mapquizdb
 # サーバーのポート
 PORT=3000
 
-#JWTのSECRET_KEY
+# JWTのSECRET_KEY
 SECRET_KEY=fgh73WQ!xD4oP@7hZmL8t9VjQk2
