--- a/.env.sample
+++ b/.env.sample
@@ -1,18 +1,5 @@
-# MySQL設定（追加する）
+# MySQL設定
 MYSQL_ROOT_PASSWORD=rootpassword  
 MYSQL_DATABASE=mapquizdb         
 MYSQL_USER=user                   
 MYSQL_PASSWORD=password           
-
-# 既存の設定
-DB_HOST=mapquiz-mysql-container
-DB_PORT=3306
-DB_USER=user
-DB_PASSWORD=password
-DB_NAME=mapquizdb
-
-# サーバーのポート
-PORT=3000
-
-# JWTのSECRET_KEY
-SECRET_KEY=fgh73WQ!xD4oP@7hZmL8t9VjQk2
