--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,28 +19,6 @@ services:
       timeout: 10s
       retries: 5
 
-  mapquiz-node:
-    build:
-      context: .  # backendディレクトリをビルド対象に
-      dockerfile: Dockerfile
-    container_name: mapquiz-node-container
-    working_dir: /app
-    volumes:
-      - ../MapQuiz-backend:/app  # バックエンドコードをマウント
-    ports:
-      - "3000:3000"
-    command: ["npm", "run", "dev"]
-    depends_on:
-      mapquiz-mysql:
-        condition: service_healthy
-    env_file:
-      - .env
-    networks:
-      - mapquiz-network
-
-volumes:
-  mysql_data:
-
 networks:
   mapquiz-network:
-    driver: bridge
+    external: true
