--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,11 @@ services:
     image: mysql:8
     container_name: mapquiz-mysql-container
     restart: always
-    env_file: 
-      - .env.db
+    environment:
+      MYSQL_ROOT_PASSWORD: rootpassword  
+      MYSQL_DATABASE: mapquizdb         
+      MYSQL_USER: user                   
+      MYSQL_PASSWORD: password           
     ports:
       - "3307:3306"
     volumes:
@@ -14,27 +17,26 @@ services:
     command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     networks:
       - mapquiz-network
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
-      timeout: 10s
-      retries: 5
 
-  mapquiz-node:
+  mapquiz-app:
     build:
-      context: .  # backendディレクトリをビルド対象に
+      context: .
       dockerfile: Dockerfile
-    container_name: mapquiz-node-container
+    container_name: mapquiz-app-container
     working_dir: /app
     volumes:
-      - ../MapQuiz-backend:/app  # バックエンドコードをマウント
+      - ../MapQuiz-frontend:/app/frontend
+      - ../MapQuiz-backend:/app/backend 
+      - ./.env_backend:/app/backend/.env
     ports:
-      - "3000:3000"
-    command: ["npm", "run", "dev"]
+      - "5173:5173"
+      - "3000:3000" 
+    command: >
+      sh -c "cd /app/backend && npm run dev & cd /app/frontend && npm run dev"
+
     depends_on:
-      mapquiz-mysql:
-        condition: service_healthy
-    env_file:
-      - .env.backend
+      - mapquiz-mysql
+ 
     networks:
       - mapquiz-network
 
