--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,20 +21,20 @@ services:
 
   mapquiz-node:
     build:
-      context: .  # backendディレクトリをビルド対象に
-      dockerfile: Dockerfile
+      context: ../
+      dockerfile: ./MapQuiz-env/Dockerfile
     container_name: mapquiz-node-container
     working_dir: /app
-    volumes:
-      - ../MapQuiz-backend:/app  # バックエンドコードをマウント
+
     ports:
       - "3000:3000"
-    command: ["npm", "run", "dev"]
+      - "5173:5173"
+    command: ["npm", "run", "dev", "--prefix", "backend"]
     depends_on:
       mapquiz-mysql:
         condition: service_healthy
     env_file:
-      - .env.backend
+      - .env
     networks:
       - mapquiz-network
 
